No audio on Shield TV - AudioTrack.DynamicsProcessing.ctor triggered an exception

Ever since this MR:

audiotrack: fix gain restoration + use DynamicsProcessing to apply a gain !261 (merged)

was approved, I've been unable to get any audio output on both my Shield TV 2019 and 2017 devices.

This issue started happening while testing VLC-Android-3.4.0-Beta-2-arm64-v8a.apk and continues to be a problem while testing VLC-Android-3.4.0-Beta-3-arm64-v8a.apk.

01:30:29.935                        AudioFlinger (3340   3815)  W    checkEffectCompatibility_l(): effect Dynamics Processing on DIRECT output thread AudioOut_1D45
01:30:29.936                         AudioEffect (942     990)  E  ┌ set(): AudioFlinger could not create effect 7261676f-6d75-7369-6364-28e2fd3ac39e / ec7178ec-e5e1-4432-a3f4-4657e6795210, status:
01:30:29.936                         AudioEffect (942     990)  E  └  -22
01:30:29.936                    AudioEffects-JNI (942     990)  E    AudioEffect initCheck failed -3
01:30:29.936                    AudioEffect-JAVA (942     990)  E    Error code -3 when initializing AudioEffect.
01:30:29.936                          System.err (942     990)  W    java.lang.RuntimeException: Cannot initialize effect engine for type: 7261676f-6d75-7369-6364-28e2fd3ac39e Error: -3
01:30:29.936                          System.err (942     990)  W    at android.media.audiofx.AudioEffect.<init>(AudioEffect.java:423)
01:30:29.936                          System.err (942     990)  W    at android.media.audiofx.DynamicsProcessing.<init>(DynamicsProcessing.java:183)
01:30:29.936                          System.err (942     990)  W    at android.media.audiofx.DynamicsProcessing.<init>(DynamicsProcessing.java:164)
01:30:29.936                          System.err (942     990)  W    at android.media.audiofx.DynamicsProcessing.<init>(DynamicsProcessing.java:149)
01:30:29.936                                 VLC (942     990)  E    [0000002ab02c3290/3de] libvlc audio output: AudioTrack.DynamicsProcessing.ctor triggered an exception !