audiotrack: don't use DynamicsProcessing with passthrough

Fixes #25921